# rust_notes

./: .gitignore  README.md
base/: Cargo.toml
base/src/: main.rs
guess_num/: Cargo.toml
guess_num/src/: main.rs
hello-rust/: Cargo.toml
hello-rust/src/: main.rs
hello_cargo/src/: main.rs
hello_rocket/: Cargo.toml  run_server.sh
hello_rocket/src/: main.rs
hello_world/: Cargo.toml
py_call_rust/: main.rs  run.sh  rust_math.rs  test.py
rust_exec/: .rustlings-state.txt
rust_exec/exercises/00_intro/: intro2.rs
rust_exec/exercises/02_functions/: functions1.rs
rust_exec/exercises/04_primitive_types/: primitive_types2.rs  primitive_types3.rs  primitive_types4.rs
rust_exec/exercises/05_vecs/: vecs1.rs
rust_exec/exercises/06_move_semantics/: move_semantics1.rs  move_semantics2.rs  move_semantics5.rs
rust_exec/exercises/07_structs/: structs1.rs  structs3.rs
rust_exec/exercises/08_enums/: enums3.rs
rust_exec/exercises/quizzes/: quiz1.rs
rust_hello/: .log.log.swp  Cargo.toml
rust_hello/src/: main.rs
syntax/: Cargo.toml
syntax/src/: main.rs
tools_grrs/: Cargo.toml
tools_grrs/src/: main.rs
