[package]
name = "hello-rocket"
version = "0.1.0"
authors = ["vincent <shix_112@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket ="0.4.4"
multipart = "0.16.1"

[dependencies.rocket_contrib]
version = "0.4.4"
default-features = false
features = ["json"]
