[package]
name = "hello_world"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# rand = "0.3"
# hammer = { version = "0.5.0" }
# color = { git = "https://github/bjz/color-rs" }
# geometry = { path = "crates/geometry" }
