[package]
name = "todos"
version = "0.1.0"
authors = ["geekpanshi <shix_112@163.com>"]
edition = "2018"
publish = false

[dependencies]
async-std = "1.9.0"
serde = { version = "1.0.124", features = ["derive"] }
serde_json = "1.0.64"
directories = "3.0.1"
iced = "0.2.0"
iced_web = "0.3.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
async-std = "1.9.0"
directories = "3.0.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3.48", features = ["Window", "Storage"] }
wasm-timer = "0.2.5"

[package.metadata.deb]
assets = [
    ["target/release/todos", "usr/bin/iced-todos", "755"],
    ["iced-todos.desktop", "usr/share/applications/", "644"],
]
